2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/console.c (grub_console_dimensions): Ignore
	bogus SLOF values.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make check work on mips-arc.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Alias sashARCS as sash.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/arc/console.c: Assume that console is 80x24 vt100 if
	it's serial.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix target fo qemu_mips.
	Fix extension on EFI.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (print_entry): Put an asterisk
	in front of chosen entry to mark it even if highlighting is lost.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Default to
	gfxpayload=keep if cbfb is active.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ata.c (grub_ata_real_open): Use grub_error properly.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing video ids to coreboot and ieee1275 video.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add mips-arc support.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c (grub_dl_resolve_symbols): Handle malloc failure.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Move mips-arc link address. Previous link address was chosen
	in belief that RAM on SGI platforms grows down while in fact it
	grows up from an unusual base.

2013-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/arc/arcdisk.c (grub_arcdisk_iterate_iter):
	Fix a type which prevented CD-ROM and floppy boot.

2013-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Support coreboot framebuffer.

	* grub-core/video/i386/coreboot/cbfb.c: New file.

2013-04-20  Vladimir Serbinenko  <phcoder@gmail.com>
